--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -5,6 +5,15 @@ resources:
     uri: https://github.com/yatzek/flight-school
     branch: master
 
+- name: staging-app
+  type: cf
+  source:
+    api: https://api.run.pivotal.io
+    username: {{pws-auth-username}}
+    password: {{pws-auth-password}}
+    organization: jacek-org
+    space: development
+
 jobs:
 - name: test-app
   plan:
@@ -12,3 +21,6 @@ jobs:
     trigger: true
   - task: tests
     file: flight-school/build.yml
+  - put: staging-app
+    params:
+      manifest: flight-school/manifest.yml
